--- a/recognition.html
+++ b/recognition.html
@@ -11,7 +11,7 @@
     <div class = "service">
         <button onclick="window.location.href='index.html';">Home</button>
         <div class = "title">
-            <h2><span>Hey!</span> This section is not updated yet, please staye tuned</h2>
+            <h2><span>Hey!</span> This section is not updated yet, please stay tuned</h2>
         </div>
     
 </body>
