--- a/recognition.html
+++ b/recognition.html
@@ -10,7 +10,7 @@
 <body>
     <div class = "service">
         <button onclick="window.location.href='index.html';">Home</button>
-        <div class = "title">
+        <div class = "recognition">
             <h2><span>Hey!</span> This section is not updated yet, please stay tuned</h2>
         </div>
     
