--- a/about.html
+++ b/about.html
@@ -17,10 +17,14 @@
             <div class = "about-text" >
                 <h2><span>About</span> Me</h2>
                 <h5> Engineer & Student</h5>
-                <p>I am a junior at New York University, majoring in computer science. I am passionate about problem-solving and creative thinking, which I discovered when I came up with ways to create mechanisms with basic tools. My love for Sciences came into life after being inspired by the Disney movie Big Hero 6. Throughout high school I became part of the Robotics team where I immersed myself in challenges that emphasized teamwork, leadership, programming, and mechanical building.
+                <p>
+                    I am a junior at New York University, majoring in computer science. My passion for problem-solving and creative thinking was ignited when I started exploring ways to create mechanisms using basic tools. Inspired by the Disney movie Big Hero 6, my love for sciences truly came to life.
+During high school, I had the privilege of being part of the Robotics team, where I fully immersed myself in challenging projects that emphasized the importance of teamwork, leadership, programming, and mechanical building. These experiences fueled my drive to continuously learn and create opportunities for underrepresented communities.
 
-                    I am driven by my passion to learn and reinforce circumstances for unrepresented communities. I am inspired by my peers, mentors, and the collage of innovators who continue to transform communities with the usage of technology. I believe that the most powerful component of change is communicating through an abstract of minds.
-                    </p>
+I find inspiration in my peers, mentors, and the collective of innovators who are dedicated to transforming communities through technology. I firmly believe that the most powerful catalyst for change lies in the exchange of ideas and collaboration among diverse minds.
+
+By combining my technical skills with a passion for inclusivity and community impact, I am determined to contribute to positive change and make a meaningful difference in the world.
+                </p>
                 <!-- <a mail="jm9353@nyu.edu" class ="btn">Let's Talk</a> -->
                 <button type = "button">Let's Talk</button>
                 <!-- <a href = "https://www.linkedin.com/in/jen-martinez-dionicio" class = "btn">LinkedIn</a> -->
