--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>I am a Software Engineering Student</h3>
             <div class = "newslatter">
                 <form  action="https://formsubmit.co/el/cudeku" method="POST">
-                    <input type = "message" name = "message" id="messageS" placeholder = "Message Me">
+                    <input type = "message" name = "message" id="messages" placeholder = "Message Me">
                     <input type = "submit" name = "submit" value = "Send">
                 </form>
             </div>
