--- a/skills.html
+++ b/skills.html
@@ -12,13 +12,14 @@
         <button onclick="window.location.href='index.html';">Home</button>
         <div class = "title">
             <h2><span>My</span> Skills</h2>
+            <h1>This <span>section</span> is missing content, stay tuned!</h1>
         </div>
         <div class="box">
             <div class = "card">
                 <i class="fa-solid fa-user"></i>
                 <h5>Software Engineering</h5>
                 <div class = "pra">
-                    <p>I believe in pushing the boundries of computer scinece
+                    <p>I believe in pushing tthe boundries of computer scinece
                         in it's everyday applications.</p>
                     <p style = "text-align: center;">
                     <a class = "button" href = "#">Read More</a>
