--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         emotion detection. This project exemplifies the synergy between academia and 
                         practical AI applications, promising advancements in understanding human emotions 
                         through technology.</p>
-                    <a href = "https://github.com/JenDionicio"><i class="fa-solid fa-database"></i></a>
+                    <a href = "https://github.com/JenDionicio/Data-Science-Project"><i class="fa-solid fa-database"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -156,7 +156,7 @@
                         effortlessly. Through iterative design, we fine-tuned its functionality for 
                         optimal performance. A testament to innovation, our rover is ready to explore 
                         new frontiers in robotics and beyond.</p>
-                    <a href = "https://github.com/JenDionicio"><i class="fa-solid fa-satellite-dish"></i></a>
+                    <a href = "https://github.com/JenDionicio/Moon-Rover-Prototype"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </div>
-        <a href="https://github.com/JenDionicio" class = "btn">See more</a>
+        <a href="https://github.com/JenDionicio/Player-Simulator" class = "btn">See more</a>
     </div>
 </div>
 
