--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/jen-martinez-dionicio"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="Jen_Martinez_Technical_Resume (1).docx" download class="btn btn2">Download Resume</a>
+                <a href="JEN_MARTINEZ_TECHNICAL_RESUME.pdf" download class="btn btn2">Download Resume</a>
                 <a href="Geneal Cover Letter - Jen Martinez.docx" download class="btn btn2">Download CV</a>
 
             </div>
