--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class = "Subtitle">About Me</h1>
-                    <p>I am a junior at New York University, majoring in computer science. My passion for problem-solving and 
+                    <p>I am a senior at New York University, majoring in computer science. My passion for problem-solving and 
                         creative thinking was ignited when I started exploring ways to create mechanisms using basic tools. Inspired 
                         by the Disney movie Big Hero 6, my love for sciences truly came to life. During high school, I had the privilege 
                         of being part of the Robotics team, where I fully immersed myself in challenging projects that emphasized the 
